gcc/testsuite/rust/rustc/ui/const-generics/defaults/default-on-impl_dg.rs
struct Foo<const N: usize>;

impl<const N: usize = 1> Foo<N> {}
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

